OTOT_Task_A3/kubernetes/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: taska3
spec:
  selector:
    app: client-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: taska3
spec:
  selector:
    app: server-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
